--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -686,6 +686,24 @@ tr img, .action-music{
 	}
 }
 
+.follow-fig {
+	margin: 1%;
+	text-align: center;
+	padding: 2%;
+	border: 3px dotted #454545;
+	display: inline-block;
+	transition: all 0.3s;
+	&:hover {
+		border-style: solid;
+		border-color: lighten(#454545, 45);
+	}
+	figcaption {
+		margin-top: 15px;
+		font-size: 1.15em;
+		font-weight: bold;
+	}
+}
+
 .list-playlist{
 	text-overflow: ellipsis;
 }
