--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
 								</div>
 						</div>
 						<div class="profil-side col-lg-3 col-md-4">
-							<%= render partial: "shared/right_sidebar", locals: {user: @user} %>
+							<%= render partial: "shared/right_sidebar", locals: {user: @user, user_songs: true} %>
 						</div>
 					</div>
 				</div>
