--- a/app/views/users/favorite.html.erb
+++ b/app/views/users/favorite.html.erb
@@ -26,7 +26,7 @@
 							<% end %>
 						</div>
 						<div class="profil-side col-lg-3 col-md-4">
-							<%= render partial: "shared/right_sidebar", locals: {user: @user} %>
+							<%= render partial: "shared/right_sidebar", locals: {user: @user, favorite: true} %>
 						</div>
 					</div>
 				</div>
