--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -63,7 +63,7 @@
 					
 				</div>
 				<div class="profil-side col-lg-3 col-md-4">
-					<%= render partial: "shared/right_sidebar", locals: {user: @playlist.user, playlist: true} %>
+					<%= render partial: "shared/right_sidebar", locals: {user: @playlist.user, data: @playlist.songs} %>
 				</div>
 			</div>
 		</div>
