--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,4 @@
+<% @title = "#{@song.title} - #{@song.artist}" %>
 <div class="container container-global">
     <!-- Sidebar -->
     <div class="row">
