--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/error_messages' %>
-
+<% @title = "Mon Compte" %>
 <div class="container">
 		<!-- Sidebar -->
 		<div class="row row-edit">
