--- a/app/views/users/favorite.html.erb
+++ b/app/views/users/favorite.html.erb
@@ -1,3 +1,4 @@
+<% @title = @user == current_user ? "Mes Favoris" : "Favoris de #{@user.username}" %>
 	<div class="container container-global">
 		<!-- Sidebar -->
 		<div class="row">
@@ -5,7 +6,7 @@
 			<div class="page-content">
 				<div class="head">
 					<%= render partial: "shared/player", locals: {songs: @user.favorite_songs.map(&:song), continue: true} %>
-					<h1 class="title-head"><%= @user == current_user ? "MES FAVORIS" : "FAVORIS DE #{@user.username}" %></h1>
+					<h1 class="title-head"><%= @title %></h1>
 					<%= render partial: "shared/user_badge" %>
 					<%= render partial: 'shared/song_search' %>
 				</div>
