--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,4 @@
+<% @title = "Recherche de Musique" %>
 <div class="container container-global">
     <!-- Sidebar -->
     <div class="row">
@@ -5,7 +6,7 @@
       <div class="page-content">
         <div class="head">
           <%= render partial: "shared/player", locals: {songs: @songs} %>
-          <h1 class="title-head">RECHERCHE DE MUSIQUE</h1>
+          <h1 class="title-head"><%= @title %></h1>
           <%= render partial: "shared/user_badge" %>
           <%= render partial: 'shared/song_search' %>
         </div>
